# rust-pixi-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  pixi.toml
.github/workflows/: pr-pipeline.yaml  trunk-pipeline.yaml
.kilocode/: mcp.json
.kilocode/rules/: code_generation.md  code_validation.md  debugging.md
src/: main.rs
