[package]
name = "rust-pixi-template"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "warn"
dead-code = "warn"

[lints.clippy]
needless_return = "allow"
implicit_return = "forbid"
pedantic = { level = "deny", priority = -1 }
print_stdout = "allow"
trivially_copy_pass_by_ref = "allow"

[dependencies]
